Pop-up visibility issue fix on mobiles

--- a/src/scss/components/_contact-form.scss
+++ b/src/scss/components/_contact-form.scss
@@ -62,6 +62,11 @@
     background: #fff;
     font-weight: bold;
     color: setColor(gray, base);
+    
+    &:hover {
+      cursor: not-allowed;
+    }
+    
     img {
       margin-right: 9px;
       max-width: 30px;
